--- a/ASP.NET MVC 6 Auth Samples/002/Auth0Sample001/Views/Shared/_Layout.cshtml
+++ b/ASP.NET MVC 6 Auth Samples/002/Auth0Sample001/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="UserProfile">Profile</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         </ul>
